--- a/inzynierstwo/literatura.bib
+++ b/inzynierstwo/literatura.bib
@@ -4,17 +4,63 @@
     url={http://www.oracle.com/technetwork/java/}
 }
 
-@misc{Spring Boot,
-	title={Spring Boot Documentation},
-	howpublished={Web pages: \url{https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/}},
-	url={https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/}
+@misc{SpringInitializr,
+	title={Spring Initializr},
+	howpublished={Web pages: \url{https://start.spring.io}},
+	url={https://start.spring.io}
 }
+draganddrop
+@misc{draganddrop,
+	title={Drag Drop Event Angular Overview},
+	howpublished={Web pages: \url{https://material.angular.io/cdk/drag-drop/overview}},
+	url={https://material.angular.io/cdk/drag-drop/overview}
+}
+
+@misc{ApacheMavenProject,
+	title={Apache Maven Project documentation},
+	howpublished={Web pages: \url{https://maven.apache.org/what-is-maven.html}},
+	url={https://maven.apache.org/what-is-maven.html}
+}
+
+@misc{SpringData,
+	title={Spring Data Overview},
+	howpublished={Web pages: \url{https://spring.io/projects/spring-data}},
+	url={https://spring.io/projects/spring-data}
+}
+
+
+@misc{git,
+	title={Git version control documentation},
+	howpublished={Web pages: \url{https://git-scm.com/doc}},
+	url={https://git-scm.com/doc}
+}
+
+@misc{SpringSecurity,
+title={Spring Security Overview},
+howpublished={Web pages: \url{https://spring.io/projects/spring-security}},
+url={https://spring.io/projects/spring-security}
+}
+
+@misc{Liquibase,
+	title={Liquibase Documentation},
+	howpublished={Web pages: \url{https://docs.liquibase.com/concepts/home.html}},
+	url={https://docs.liquibase.com/concepts/home.html/}
+}
+
+@misc{Postman,
+	title={Postman Documentation},
+	howpublished={Web pages: \url{https://www.postman.com/api-documentation-tool/}},
+	url={https://www.postman.com/api-documentation-tool/}
+}
+
+
 @book{HTML-CSS,
     author={Ben Frain},
     title={Responsive Web Design with HTML5 and CSS3},
     publisher={Packt Publishing},
     year={2012}
 }
+
 
 @INPROCEEDINGS{6827095,
 	author={Syromiatnikov, Artem and Weyns, Danny},
